# cpp_smartpointer

./: README.md
cpp_smartpointer/: CMakeLists.txt  main.cpp
cpp_smartpointer_test/: CMakeLists.txt  tst_smartpointertestcase.cpp
